--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
     ],
     "require": {
         "php": "^8.2",
+        "elegantly/laravel-money": "^2.0.1",
+        "illuminate/contracts": "^10.0||^11.0",
         "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^10.0||^11.0"
+        "spatie/php-structure-discoverer": "^2.2"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
