--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "keywords": [
         "ElegantEngineeringTech",
         "laravel",
-        "laravel-kpi"
+        "laravel-kpi",
+        "kpi",
+        "metrics"
     ],
     "homepage": "https://github.com/elegantengineeringtech/laravel-kpi",
     "license": "MIT",
@@ -18,15 +20,15 @@
     "require": {
         "php": "^8.2",
         "elegantly/laravel-money": "^2.0.1",
-        "illuminate/contracts": "^10.0||^11.0",
+        "illuminate/contracts": "^11.0",
         "spatie/laravel-package-tools": "^1.16",
         "spatie/php-structure-discoverer": "^2.2"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
-        "nunomaduro/collision": "^8.1.1||^7.10.0",
+        "nunomaduro/collision": "^8.1.1",
         "larastan/larastan": "^2.9",
-        "orchestra/testbench": "^9.0.0||^8.22.0",
+        "orchestra/testbench": "^9.0.0",
         "pestphp/pest": "^2.34",
         "pestphp/pest-plugin-arch": "^2.7",
         "pestphp/pest-plugin-laravel": "^2.3",
