--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^8.2",
         "elegantly/laravel-money": "^2.0.1",
-        "illuminate/contracts": "^11.0",
+        "illuminate/contracts": "^11.0||^12.0",
         "spatie/laravel-package-tools": "^1.16",
         "spatie/php-structure-discoverer": "^2.2"
     },
